--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Stuffvish coming soon</title>
+    <title>Custom GPT</title>
 
     <link rel="stylesheet" href="style.css">
 
@@ -22,24 +22,15 @@
 <body>
 
     <nav class="navbar navbar-expand-sm navbar-dark">
-        <a href="#" class="navbar-brand">StuffVish</a>
+        <a href="#" class="navbar-brand">Custom GPT</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarMenu">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a href="#" class="nav-link"><i class="fa fa-facebook"></i></a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link"><i class="fa fa-twitter"></i></a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link"><i class="fa fa-telegram"></i></a>
-                </li>
-                <li class="nav-item">
                     <a href="#" class="nav-link"><i class="fa fa-envelope"><span class="email">
-                                &nbsp;support@stuffvish.com</span></i></a>
+                                &nbsp;help@customgpts.in</span></i></a>
                 </li>
             </ul>
         </div>
