--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <div class="container">
         <div class="row d-flex align-items-center" style="min-height: 80vh;">
             <div class="col float-right">
-                <h2 class="left-text">Shaping AI <span class="creating">to</span> Fit <span class="different">
-                        Your World</span></h2>
+                <h2 class="left-text">SHAPING AI <span class="creating">  TO    </span>     FIT   <span class="different">
+                        YOUR WORLD</span></h2>
             </div>
             <div class="col">
                 <h2 class="right-text">Everything is <br> about to <span class="change">change</span></h2>
