--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container">
         <div class="row d-flex align-items-center" style="min-height: 80vh;">
             <div class="col float-right">
-                <h2 class="left-text">SHAPING AI <span class="creating">  TO    </span>     FIT   <span class="different">
+                <h2 class="left-text">SHAPING AI <span class="creating">  <br>TO</br>    </span>     FIT   <span class="different">
                         YOUR WORLD</span></h2>
             </div>
             <div class="col">
