--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
     <nav class="navbar navbar-expand-sm navbar-dark">
-        <a href="#" class="navbar-brand"><h2>Custom GPT</h2></a>
+        <a href="#" class="navbar-brand">Custom GPT</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
