--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a href="#" class="nav-link"><i class="fa fa-twitter"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link"><i class="fa fa-telegram"></i></a>
+                    <a href="#" class="nav-link"><i class="fa fa-linkedin"></i></a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link"><i class="fa fa-envelope"><span class="email">
