--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <div class="collapse navbar-collapse" id="navbarMenu">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a href="https://twitter.com/ajyghosh" class="nav-link"><i class="fa fa-twitter"></i></a>
+                    <a href="https://twitter.com/ajyghosh" class="nav-link" target="_blank"><i class="fa fa-twitter"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a href="https://www.linkedin.com/in/ajyghosh/" class="nav-link"><i class="fa fa-telegram"></i></a>
+                    <a href="https://www.linkedin.com/in/ajyghosh/" class="nav-link" target="_blank"><i class="fa fa-telegram"></i></a>
                 </li>
                 <li class="nav-item">
                     <a href="mailto:help@customgpts.in" class="nav-link"><i class="fa fa-envelope"><span class="email">
