--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="container">
         <div class="row d-flex align-items-center" style="min-height: 80vh;">
             <div class="col float-right">
-                <h2 class="left-text">SHAPING AI <span class="creating">  <br>TO</br>    </span>     FIT   <span class="different">
+                <h2 class="left-text">SHAPING  <span class="creating">  <br>AI</br>    </span>     TO FIT   <span class="different">
                         <br>YOUR WORLD</br></span></h2>
             </div>
             <div class="col">
