--- a/index.html
+++ b/index.html
@@ -69,3 +69,43 @@
 </body>
 
 </html>
+
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        /* Style the arrow container */
+        .next-page-arrow {
+            position: fixed;
+            bottom: 20px; /* Adjust the position as needed */
+            right: 20px; /* Adjust the position as needed */
+        }
+
+        /* Style the arrow icon */
+        .next-page-arrow a {
+            display: block;
+            width: 40px; /* Adjust the size as needed */
+            height: 40px; /* Adjust the size as needed */
+            background-color: #007bff; /* Arrow background color */
+            color: #fff; /* Arrow text color */
+            text-align: center;
+            line-height: 40px;
+            border-radius: 50%;
+            font-size: 24px; /* Arrow size */
+            text-decoration: none;
+        }
+
+        /* Hover effect (optional) */
+        .next-page-arrow a:hover {
+            background-color: #0056b3; /* Hover background color */
+        }
+    </style>
+</head>
+<body>
+    <div class="next-page-arrow">
+        <a href="next-page.html">
+            <span>&#8594;</span> <!-- Right arrow character -->
+        </a>
+    </div>
+</body>
+</html>
