--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 </head>
 <body>
     <div class="next-page-arrow">
-        <a href="main">
+        <a href="CustomGPT">
             <span>&#8594;</span> <!-- Right arrow character -->
         </a>
     </div>
