--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
         .next-page-arrow {
             position: fixed;
             bottom: 20px; /* Adjust the position as needed */
-            right: 20px; /* Adjust the position as needed */
+            left: 50%;
+            transform: translateX(-50%);
         }
 
         /* Style the arrow icon */
@@ -124,4 +125,5 @@
     </div>
 </body>
 </html>
+
 
