--- a/CustomGPT.html
+++ b/CustomGPT.html
@@ -107,8 +107,185 @@
                 <td class="product-details">Designer 2</td>
                 <td class="product-details"><a href="https://www.designer2.com">Designer 2's Profile</a></td>
             </tr>
+                        <tr class="product-box">
+                <td class="product-details">Product 1</td>
+                <td class="product-details">Description for Product 1</td>
+                <td class="product-details">Designer 1</td>
+                <td class="product-details"><a href="https://www.designer1.com">Designer 1's Profile</a></td>
+            </tr>
+            <tr class="product-box">
+                <td class="product-details">Product 2</td>
+                <td class="product-details">Description for Product 2</td>
+                <td class="product-details">Designer 2</td>
+                <td class="product-details"><a href="https://www.designer2.com">Designer 2's Profile</a></td>
+            </tr>
+                        <tr class="product-box">
+                <td class="product-details">Product 1</td>
+                <td class="product-details">Description for Product 1</td>
+                <td class="product-details">Designer 1</td>
+                <td class="product-details"><a href="https://www.designer1.com">Designer 1's Profile</a></td>
+            </tr>
+            <tr class="product-box">
+                <td class="product-details">Product 2</td>
+                <td class="product-details">Description for Product 2</td>
+                <td class="product-details">Designer 2</td>
+                <td class="product-details"><a href="https://www.designer2.com">Designer 2's Profile</a></td>
+            </tr>
+                        <tr class="product-box">
+                <td class="product-details">Product 1</td>
+                <td class="product-details">Description for Product 1</td>
+                <td class="product-details">Designer 1</td>
+                <td class="product-details"><a href="https://www.designer1.com">Designer 1's Profile</a></td>
+            </tr>
+            <tr class="product-box">
+                <td class="product-details">Product 2</td>
+                <td class="product-details">Description for Product 2</td>
+                <td class="product-details">Designer 2</td>
+                <td class="product-details"><a href="https://www.designer2.com">Designer 2's Profile</a></td>
+            </tr>
+                        <tr class="product-box">
+                <td class="product-details">Product 1</td>
+                <td class="product-details">Description for Product 1</td>
+                <td class="product-details">Designer 1</td>
+                <td class="product-details"><a href="https://www.designer1.com">Designer 1's Profile</a></td>
+            </tr>
+            <tr class="product-box">
+                <td class="product-details">Product 2</td>
+                <td class="product-details">Description for Product 2</td>
+                <td class="product-details">Designer 2</td>
+                <td class="product-details"><a href="https://www.designer2.com">Designer 2's Profile</a></td>
+            </tr>
+                        <tr class="product-box">
+                <td class="product-details">Product 1</td>
+                <td class="product-details">Description for Product 1</td>
+                <td class="product-details">Designer 1</td>
+                <td class="product-details"><a href="https://www.designer1.com">Designer 1's Profile</a></td>
+            </tr>
+            <tr class="product-box">
+                <td class="product-details">Product 2</td>
+                <td class="product-details">Description for Product 2</td>
+                <td class="product-details">Designer 2</td>
+                <td class="product-details"><a href="https://www.designer2.com">Designer 2's Profile</a></td>
+            </tr>
+                        <tr class="product-box">
+                <td class="product-details">Product 1</td>
+                <td class="product-details">Description for Product 1</td>
+                <td class="product-details">Designer 1</td>
+                <td class="product-details"><a href="https://www.designer1.com">Designer 1's Profile</a></td>
+            </tr>
+            <tr class="product-box">
+                <td class="product-details">Product 2</td>
+                <td class="product-details">Description for Product 2</td>
+                <td class="product-details">Designer 2</td>
+                <td class="product-details"><a href="https://www.designer2.com">Designer 2's Profile</a></td>
+            </tr>
+                        <tr class="product-box">
+                <td class="product-details">Product 1</td>
+                <td class="product-details">Description for Product 1</td>
+                <td class="product-details">Designer 1</td>
+                <td class="product-details"><a href="https://www.designer1.com">Designer 1's Profile</a></td>
+            </tr>
+            <tr class="product-box">
+                <td class="product-details">Product 2</td>
+                <td class="product-details">Description for Product 2</td>
+                <td class="product-details">Designer 2</td>
+                <td class="product-details"><a href="https://www.designer2.com">Designer 2's Profile</a></td>
+            </tr>
+                        <tr class="product-box">
+                <td class="product-details">Product 1</td>
+                <td class="product-details">Description for Product 1</td>
+                <td class="product-details">Designer 1</td>
+                <td class="product-details"><a href="https://www.designer1.com">Designer 1's Profile</a></td>
+            </tr>
+            <tr class="product-box">
+                <td class="product-details">Product 2</td>
+                <td class="product-details">Description for Product 2</td>
+                <td class="product-details">Designer 2</td>
+                <td class="product-details"><a href="https://www.designer2.com">Designer 2's Profile</a></td>
+            </tr>
+                        <tr class="product-box">
+                <td class="product-details">Product 1</td>
+                <td class="product-details">Description for Product 1</td>
+                <td class="product-details">Designer 1</td>
+                <td class="product-details"><a href="https://www.designer1.com">Designer 1's Profile</a></td>
+            </tr>
+            <tr class="product-box">
+                <td class="product-details">Product 2</td>
+                <td class="product-details">Description for Product 2</td>
+                <td class="product-details">Designer 2</td>
+                <td class="product-details"><a href="https://www.designer2.com">Designer 2's Profile</a></td>
+            </tr>
+                        <tr class="product-box">
+                <td class="product-details">Product 1</td>
+                <td class="product-details">Description for Product 1</td>
+                <td class="product-details">Designer 1</td>
+                <td class="product-details"><a href="https://www.designer1.com">Designer 1's Profile</a></td>
+            </tr>
+            <tr class="product-box">
+                <td class="product-details">Product 2</td>
+                <td class="product-details">Description for Product 2</td>
+                <td class="product-details">Designer 2</td>
+                <td class="product-details"><a href="https://www.designer2.com">Designer 2's Profile</a></td>
+            </tr>
             <!-- Add more products as needed -->
         </tbody>
     </table>
 </body>
 </html>
+
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        /* Style the arrow container */
+        .prev-page-arrow {
+            position: fixed;
+            bottom: 20px; /* Adjust the position as needed */
+            left: 50%;
+            transform: translateX(-50%);
+        }
+
+        /* Style the arrow icon */
+        .prev-page-arrow a {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            width: 40px; /* Adjust the size as needed */
+            height: 40px; /* Adjust the size as needed */
+            background-color: #007bff; /* Arrow background color */
+            color: #fff; /* Arrow text color */
+            border-radius: 50%;
+            font-size: 28px; /* Increase font size for a thicker arrow */
+            text-decoration: none;
+            animation: blink 1s infinite; /* Blink animation */
+            transition: background-color 0.3s ease; /* Smooth color transition */
+        }
+
+        /* Hover effect */
+        .prev-page-arrow a:hover {
+            background-color: #0056b3; /* Hover background color */
+        }
+
+        /* Blink animation */
+        @keyframes blink {
+            0% {
+                opacity: 1;
+            }
+            50% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="prev-page-arrow">
+        <a href="index">
+            <span>&#8592;</span> <!-- Left arrow character -->
+        </a>
+    </div>
+</body>
+</html>
+
